--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.6.0
+boto3==1.26.143
+botocore==1.29.143
 crispy-bootstrap5==0.7
 Django==4.2.1
 django-cleanup==7.0.0
@@ -6,13 +8,19 @@ django-crispy-forms==2.0
 django-jazzmin==2.6.0
 django-multiselectfield==0.1.12
 django-phonenumber-field==7.1.0
+django-storages==1.13.2
 gunicorn==20.1.0
+jmespath==1.0.1
 pdfkit==1.0.0
 phonenumberslite==8.13.11
 Pillow==9.5.0
 psycopg2==2.9.6
+python-dateutil==2.8.2
 python-decouple==3.8
+s3transfer==0.6.1
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
+urllib3==1.26.16
 whitenoise==6.4.0
 wkhtmltopdf==0.2
